Implement new features for internship matching

--- a/student.html
+++ b/student.html
@@ -43,6 +43,7 @@
   <h3>Matching Internship Opportunities</h3>
   <div id="matchesList"></div>
 </div>
+<script src="companies.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
