Fix: Correct API URL and improve server error handling

--- a/signup.html
+++ b/signup.html
@@ -64,7 +64,7 @@ th<!DOCTYPE html>
     };
     
     try {
-      const response = await fetch('http://localhost:3000/api/register/student', {
+      const response = await fetch('/api/register/student', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
