--- a/signup.html
+++ b/signup.html
@@ -15,38 +15,24 @@ th<!DOCTYPE html>
   <form id="signupForm">
     <div class="mb-3">
       <label class="form-label">Name</label>
-      <input type="text" class="form-control" placeholder="Enter your name" required>
+      <input type="text" class="form-control" name="name" placeholder="Enter your name" required>
     </div>
     <div class="mb-3">
       <label class="form-label">Email</label>
-      <input type="email" class="form-control" placeholder="Enter your email" required>
+      <input type="email" class="form-control" name="email" placeholder="Enter your email" required>
     </div>
     <div class="mb-3">
-      <label class="form-label">Password</label>
-      <input type="password" class="form-control" placeholder="Enter your password" required>
+      <label class="form-label">Skills</label>
+      <input type="text" class="form-control" name="skills" placeholder="Enter your skills" required>
     </div>
-    <button type="submit" class="btn btn-modern btn-primary-modern">Sign Up</button>
+    <div class="mb-3">
+      <label class="form-label">Location</label>
+      <input type="text" class="form-control" name="location" placeholder="Enter your location" required>
+    </div>
+    <button type="submit" class="btn btn-modern btn-primary-modern">Register</button>
   </form>
   <p class="mt-3">Already have an account? <a href="login.html">Login here</a></p>
   <a href="index.html" class="btn btn-modern btn-link-modern mt-3">Back to Home</a>
-</div>
-
-<!-- Success Modal -->
-<div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="successModalLabel">Registration Successful!</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        You have been successfully registered. Please check your email for confirmation.
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="window.location.href='index.html'">OK</button>
-      </div>
-    </div>
-  </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -60,14 +46,16 @@ th<!DOCTYPE html>
 
     const formData = new FormData(event.target);
     const data = {
-      name: formData.get('name') || document.querySelector('input[placeholder="Enter your name"]').value,
-      email: formData.get('email') || document.querySelector('input[placeholder="Enter your email"]').value,
-      password: formData.get('password') || document.querySelector('input[placeholder="Enter your password"]').value,
-      skills: 'javascript,html,css', // Default skills, can be made dynamic
-      location: 'remote' // Default location, can be made dynamic
+      name: formData.get('name'),
+      email: formData.get('email'),
+      skills: formData.get('skills'),
+      location: formData.get('location')
     };
 
     try {
+      // Save data to localStorage
+      localStorage.setItem('userProfile', JSON.stringify(data));
+
       // Send email using EmailJS
       await emailjs.send('service_cz606uf', 'template_uwuudt4', {
         to_email: data.email,
@@ -75,9 +63,8 @@ th<!DOCTYPE html>
         // Add other template variables as needed
       });
 
-      // Show success modal
-      const successModal = new bootstrap.Modal(document.getElementById('successModal'));
-      successModal.show();
+      // Redirect to profile page
+      window.location.href = 'profile.html';
     } catch (error) {
       alert('Registration failed: ' + error.text || error.message);
     }
