--- a/company.html
+++ b/company.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
   <title>Company Registration</title>
@@ -8,8 +8,8 @@
 <body class="bg-light">
 <header style="display: flex; justify-content: space-between; align-items: center; padding: 10px 20px; background: white; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
   <div style="display: flex; align-items: center;">
-    <img src="https://pminternship.mca.gov.in/assets/img/MCA.svg" alt="MCA Logo" style="height: 50px; margin-right: 20px;">
-    <img src="https://pminternship.mca.gov.in/assets/images/img/pm_internship_logo_eng.svg" alt="PM Internship Logo" style="height: 50px;">
+    <img src="MCA.svg" alt="MCA Logo" style="height: 50px; margin-right: 20px;">
+    <img src="pm_internship_logo_eng.svg" alt="PM Internship Logo" style="height: 50px;">
   </div>
   <div>
     <a href="login.html" class="btn btn-modern btn-primary-modern m-1" style="min-width: 80px;">Login</a>
@@ -36,6 +36,10 @@
       <input type="text" id="location" class="form-control" placeholder="City name">
     </div>
     <div class="mb-3">
+      <label class="form-label">Internship Capacity</label>
+      <input type="number" id="capacity" class="form-control" placeholder="e.g., 10" min="1" required>
+    </div>
+    <div class="mb-3">
       <label class="form-label">Email</label>
       <input type="email" id="email" class="form-control" placeholder="Enter your email" required>
     </div>
@@ -55,6 +59,7 @@
       role: document.getElementById('role').value,
       skills: document.getElementById('skills').value,
       location: document.getElementById('location').value,
+      capacity: document.getElementById('capacity').value,
       email: document.getElementById('email').value
     };
     try {
@@ -80,5 +85,38 @@
     }
   });
 </script>
-</body>
+
+<!-- Footer -->
+<footer class="footer bg-dark text-white py-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
 </html>
+        <p>Email: support@pminternship.gov.in</p>
+        <p>Phone: +91-11-12345678</p>
+      </div>
+      <div class="col-md-6 text-end">
+        <h5>Help & Support</h5>
+        <p class="mt-2">Need help? Contact us.</p>
+      </div>
+    </div>
+    <hr>
+    <p class="text-center mb-0">© 2025 PM Internship Scheme. All rights reserved.</p>
+  </div>
+</footer>
+
+  <!-- AI Chatbot -->
+  <div id="chat-window" class="chat-window">
+    <div class="chat-header">
+      <h5>PM Internship Assistant</h5>
+      <span id="close-chat">&times;</span>
+    </div>
+    <div id="chat-messages"></div>
+    <form id="chat-form">
+      <input type="text" id="chat-input" placeholder="Type your message...">
+      <button type="submit">Send</button>
+    </form>
+  </div>
+  <button id="chatbot-btn" class="chatbot-btn"><img src="https://cdn.shopify.com/app-store/listing_images/e01adf90e60dcfdb4e39b5485859d18b/icon/CMrqusKG_4wDEAE=.png" alt="AI Bot"></button>
+  <script src="chatbot.js"></script>
+</body>
