--- a/schemes.html
+++ b/schemes.html
@@ -8,8 +8,8 @@
 </head>
 <body class="bg-light">
 <header style="display: flex; justify-content: flex-start; align-items: center; padding: 10px 20px; background: white; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-  <img src="https://pminternship.mca.gov.in/assets/img/MCA.svg" alt="MCA Logo" style="height: 50px; margin-right: 20px;">
-  <img src="https://pminternship.mca.gov.in/assets/images/img/pm_internship_logo_eng.svg" alt="PM Internship Logo" style="height: 50px;">
+  <img src="MCA.svg" alt="MCA Logo" style="height: 50px; margin-right: 20px;">
+  <img src="pm_internship_logo_eng.svg" alt="PM Internship Logo" style="height: 50px;">
 </header>
 <div class="container mt-5 fade-in">
   <h2>PM Internship Schemes</h2>
@@ -81,5 +81,38 @@
   <a href="index.html" class="btn btn-modern btn-link-modern mt-3">Back to Home</a>
 
 </div>
+
+<!-- Footer -->
+<footer class="footer bg-dark text-white py-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h5>Contact Information</h5>
+        <p>Email: support@pminternship.gov.in</p>
+        <p>Phone: +91-11-12345678</p>
+      </div>
+      <div class="col-md-6 text-end">
+        <h5>Help & Support</h5>
+        <p class="mt-2">Need help? Contact us.</p>
+      </div>
+    </div>
+    <hr>
+    <p class="text-center mb-0">© 2025 PM Internship Scheme. All rights reserved.</p>
+  </div>
+</footer>
+
+  <!-- AI Chatbot -->
+  <div id="chat-window" class="chat-window">
+    <div class="chat-header">
+      <h5>PM Internship Assistant</h5>
+      <span id="close-chat">&times;</span>
+    </div>
+    <div id="chat-messages"></div>
+    <form id="chat-form">
+      <input type="text" id="chat-input" placeholder="Type your message...">
+      <button type="submit">Send</button>
+    </form>
+  </div>
+  <script src="chatbot.js"></script>
 </body>
 </html>
